--- a/package.json
+++ b/package.json
@@ -18,5 +18,10 @@
     "vue-server-renderer": "^2.6.14",
     "vue-template-compiler": "^2.6.14",
     "webpack": "^4.46.0"
+  },
+  "devDependencies": {
+    "@nuxtjs/style-resources": "^1.2.1",
+    "sass": "^1.53.0",
+    "sass-loader": "^10.3.1"
   }
 }
